--- a/presentation/slides.tex
+++ b/presentation/slides.tex
@@ -20,14 +20,14 @@
 \usepackage{inconsolata}
 \usemintedstyle{default}
 
-\newmint{haskell}{mathescape,fontfamily=tt}
-\newmintedfile{haskell}{xleftmargin=20pt,mathescape,fontfamily=tt}
+\newmint{haskell}{mathescape,fontfamily=tt,fontsize=\footnotesize}
+\newmintedfile{haskell}{xleftmargin=20pt,mathescape,fontfamily=tt,fontsize=\footnotesize}
 
-\newminted{haskell}{xleftmargin=20pt,gobble=8,mathescape,fontfamily=tt}
-\newmint{coq}{mathescape,fontfamily=tt}
+\newminted{haskell}{xleftmargin=20pt,gobble=8,mathescape,fontfamily=tt,fontsize=\footnotesize}
+\newmint{coq}{mathescape,fontfamily=tt,fontsize=\footnotesize}
 
-\newmintedfile{coq}{xleftmargin=20pt,mathescape,fontfamily=tt}
-\newminted{coq}{gxleftmargin=20pt,obble=8,mathescape,fontfamily=tt}
+\newmintedfile{coq}{xleftmargin=20pt,mathescape,fontfamily=tt,fontsize=\footnotesize}
+\newminted{coq}{gxleftmargin=20pt,obble=8,mathescape,fontfamily=tt,fontsize=\footnotesize}
 
 
 
@@ -420,22 +420,49 @@
         \label{subsec:lava}
             \begin{frame}
                 \frametitle{Lava}
-
                 \haskellfile{code/lava-adders.hs}
             \end{frame}
+
+            \begin{frame}
+                \frametitle{Lava}
+                \haskellfile{code/lava-alu.hs}
+            \end{frame}
+
+            \begin{frame}
+                \frametitle{Lava}
+                \haskellfile{code/lava-verify-fulladder-comm.hs}
+            \end{frame}
+
 
         \subsection{ForSyDe}
         \label{subsec:forsyde}
             \begin{frame}
-                \frametitle{ForSyDe}
+                \frametitle{ForSyDe: ALU}
+                \haskellfile{code/forsyde-alu-slide1.hs}
             \end{frame}
+
+            \begin{frame}
+                \frametitle{ForSyDe: Muxes}
+                \haskellfile{code/forsyde-muxes.hs}
+            \end{frame}
+
 
         \subsection{Coquet}
         \label{subsec:coquet}
             \begin{frame}
-                \frametitle{Coquet}
+                \frametitle{The \texttt{Circuit} type}
+                \coqfile{code/coquet-circuit-type.v}
             \end{frame}
 
+            \begin{frame}
+                \frametitle{Coquet}
+                \coqfile{code/coquet-halfadder.v}
+            \end{frame}
+
+            \begin{frame}
+                \frametitle{Coquet}
+                \coqfile{code/coquet-fulladder.v}
+            \end{frame}
 
 
     \section{Conclusions}
